yamls/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  selector:
    matchLabels:
      app: uptime-kuma
  replicas: 2 
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:1.15.1-debian
        ports:
        - containerPort: 3001
      #   volumeMounts:
      #   - mountPath: /app/data 
      #     name: data
      # volumes:
      # - name: data
      #   persistentVolumeClaim:
      #     claimName: app-data
